[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# bevy
bevy = { version = "0.19", default-features = false, features = ["2d", "ui"] }

# other
rand = "0.10.1"
rand_chacha = "0.10.0"
tracing = "0.1.44"

